add project to be tested

--- a/SampleProject.Tests/SampleProject.Tests.vcxproj
+++ b/SampleProject.Tests/SampleProject.Tests.vcxproj
@@ -47,6 +47,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SampleProject.Sources\SampleProject.Sources.vcxproj">
+      <Project>{8527f796-5ad1-4abd-9dd1-02f197fdee09}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <ItemDefinitionGroup />
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
